--- a/Min hemsida.html
+++ b/Min hemsida.html
@@ -47,6 +47,7 @@
         nulla quis distinctio, praesentium doloremque officia nisi nam suscipit?
       </div>
       <div class="right"><img src="minbild1.jpg" alt=""></div>
+      <p>Dilan Mahmod</p>
       <div class="footer">Detta är en footer</div>
       <div class="footer">
         <p>Footer</p>
