--- a/layout.html
+++ b/layout.html
@@ -3,27 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DilanMahmod</title>
+    <title>SkinxGlow</title>
+    <!--Här länkar jag till css style-->
     <link rel="stylesheet" href="layout.css">
 </head>
 
 <div class="container">
   <div class="header"> <h1>SkinxGlow</h1></div>
-  <main>Welcome to my page</main>
-  <div id="sidebar"> <img src="minbild1.jpg" alt="My face">Sidebar</div>
-  <div id="content1">1<img src="face.jpg" alt=""></div>
-  <div id="content2">2</div>
-  <div id="content3">3</div>
+  <main><img src="bilder/jag.img.JPG" alt="">Welcome to my page <p>My name is Dilan Mahmod and I am 27 years old. I have been a certified skincare therapist for several years, and I am truly passionate about it. What I love the most is skincare, and my passion for it developed at a young age when my mother used various skincare products when I was a child, sparking my interest in pursuing this field as a career. I genuinely enjoy spreading knowledge about the importance of skincare and the positive results that can be achieved by using the right products. In my free time, I like to work out and spend time with my family and friends. Im here to help you and will customize a skincare routine for those who need it. You can contact me here</p></main>
+  <div id="sidebar">Sidebar</div>
+  <div id="content1">1 <img src="bilder/nybild.jpg.JPG" alt=""></div>
+  <div id="content2">2 <img src="bilder/nybild3.jpg.JPG" alt=""></div>
+  <div id="content3">3 <img src="bilder/nybild2.jpg.JPG" alt=""></div>
   <footer>Home About me Contact</footer>
   
 </div>
 
 <body>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, veritatis. Ab saepe numquam ad corporis est enim magni soluta magnam esse quam minima cupiditate, vel error neque sit cumque fuga.
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iste beatae natus delectus, recusandae nemo? Incidunt ut quo inventore eum ratione quas dolorem rem fuga nesciunt, quibusdam blanditiis nulla optio!
- orem ipsum dolor sit amet consectetur adipisicing elit. Error alias blanditiis adipisci expedita ipsa doloremque quam ab eveniet, exercitationem reiciendis, perferendis quae nobis sequi, eius numquam aliquam! Exercitationem, asperiores dolore.
- Lorem ipsum dolor sit, amet consectetur adipisicing elit. A maiores, quis ad nostrum modi id sed veritatis dolores culpa neque voluptatum! Aperiam repudiandae dolore odit veniam atque architecto quis sed!
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque quas temporibus, facere porro minima quam consectetur dolorem soluta asperiores eaque dolores quod, magni quibusdam laboriosam pariatur facilis nisi ab eos?
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, hic explicabo! Blanditiis, doloremque commodi minima labore eos veniam aliquid obcaecati. Amet aspernatur veniam labore consectetur voluptatum voluptates, enim eveniet doloremque.
+
 </body>
 </html>
