--- a/layout.html
+++ b/layout.html
@@ -7,19 +7,20 @@
     <!--Här länkar jag till css style-->
     <link rel="stylesheet" href="layout.css">
 </head>
-
+  
 <div class="container">
   <div class="header"> <h1>SkinxGlow</h1></div>
   <main><img src="bilder/jag.img.JPG" alt="">Welcome to my page <p>My name is Dilan Mahmod and I am 27 years old. I have been a certified skincare therapist for several years, and I am truly passionate about it. What I love the most is skincare, and my passion for it developed at a young age when my mother used various skincare products when I was a child, sparking my interest in pursuing this field as a career. I genuinely enjoy spreading knowledge about the importance of skincare and the positive results that can be achieved by using the right products. In my free time, I like to work out and spend time with my family and friends. Im here to help you and will customize a skincare routine for those who need it. You can contact me here</p></main>
   <div id="sidebar">Sidebar</div>
-  <div id="content1">1 <img src="bilder/nybild.jpg.JPG" alt=""></div>
-  <div id="content2">2 <img src="bilder/nybild3.jpg.JPG" alt=""></div>
-  <div id="content3">3 <img src="bilder/nybild2.jpg.JPG" alt=""></div>
+  <div id="content1">1 <img src="bilder/nybild.jpg.JPG" alt="">Bild på en tjej med lite kräm på ansiktet</div>
+  <div id="content2">2 <img src="bilder/nybild3.jpg.JPG" alt="">Bild på en tjej med lite kräm på ansiktet</div>
+  <div id="content3">3 <img src="bilder/nybild2.jpg.JPG" alt="">Bild på en tjej med lite kräm på ansiktet</div>
   <footer>Home About me Contact</footer>
   
 </div>
 
 <body>
-
+  
+</body>
 </body>
 </html>
