--- a/layout.html
+++ b/layout.html
@@ -8,19 +8,48 @@
     <link rel="stylesheet" href="layout.css">
 </head>
   
-<div class="container">
-  <div class="header"> <h1>SkinxGlow</h1></div>
-  <main><img src="bilder/jag.img.JPG" alt="">Welcome to my page <p>My name is Dilan Mahmod and I am 27 years old. I have been a certified skincare therapist for several years, and I am truly passionate about it. What I love the most is skincare, and my passion for it developed at a young age when my mother used various skincare products when I was a child, sparking my interest in pursuing this field as a career. I genuinely enjoy spreading knowledge about the importance of skincare and the positive results that can be achieved by using the right products. In my free time, I like to work out and spend time with my family and friends. Im here to help you and will customize a skincare routine for those who need it. You can contact me here</p></main>
-  <div id="sidebar">Sidebar</div>
-  <div id="content1">1 <img src="bilder/nybild.jpg.JPG" alt="">Bild på en tjej med lite kräm på ansiktet</div>
-  <div id="content2">2 <img src="bilder/nybild3.jpg.JPG" alt="">Bild på en tjej med lite kräm på ansiktet</div>
-  <div id="content3">3 <img src="bilder/nybild2.jpg.JPG" alt="">Bild på en tjej med lite kräm på ansiktet</div>
-  <footer>Home About me Contact</footer>
-  
-</div>
-
 <body>
-  
-</body>
+  <div class= "container">
+    <div class="header">
+     <h1>SkinxGlow</h1></div>
+    <main><img src="bilder/jag.img.JPG" alt=""><h3>Welcome to my page</h3><p>My name is Dilan Mahmod and I am 27 years old. I have been a certified skincare therapist for several years, and I am truly passionate about it. What I love the most is skincare, and my passion for it developed at a young age when my mother used various skincare products when I was a child, sparking my interest in pursuing this field as a career. I genuinely enjoy spreading knowledge about the importance of skincare and the positive results that can be achieved by using the right products. In my free time, I like to work out and spend time with my family and friends. Im here to help you and if you want customized product recommendations, you can contact me.</p></main>
+    <div class="sidebar">
+      <h2>My 8 steps for the perfect skincare routine:</h2>
+      <ol>
+        <li>Facial</li>
+        <li>A good toner</li>
+        <li>Facial scrub</li>
+        <li>Serum</li>
+        <li>Essence</li>
+        <li>Face cream</li>
+        <li>Eyecream</li>
+        <li>Sunscreen</li>
+      </ol>
+      <form>
+        <h4>Contact me:</h4>
+      <label for="fnamn">First name:</label><br>
+      <input type="text" id="fname" name="fname"placeholder="Enter your first name here"><br>
+      <label for="lname">Last name:</label><br>
+      <input type="text" id="lname" name="lname" placeholder="Enter your last name here"><br>
+      <label for="mail">Email:</label><br>
+      <input type="text" id="mail" name="mail" placeholder="Enter your email here"><br>
+      <label for="meddelande">Send a message:</label><br>
+      <input type="text" id="meddelande" name="meddelande"placeholder="Enter your message here"><br><br>
+      
+      <input type="submit" value="Send">
+      
+
+      </form>
+    </div>
+    <div id="content1"><img src="bilder/nybild.jpg.JPG" alt=""></div>
+    <div id="content2"><img src="bilder/nybild3.jpg.JPG" alt=""></div>
+    <div id="content3"><img src="bilder/nybild2.jpg.JPG" alt=""></div>
+   <div class="footer"> 
+<footer>
+<a href="#">Contact</a>
+<a href="#">About</a>
+<a href="#">Home</a>
+</footer>
+</div>
 </body>
 </html>
